[gd_scene load_steps=2 format=3 uid="uid://bgauarulukili"]

[ext_resource type="Script" path="res://scripts/city_state_view.gd" id="1_8ih5e"]

[node name="CityState" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
script = ExtResource("1_8ih5e")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Stationary Energy"

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(500, 20)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Transport"

[node name="ProgressBar2" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(500, 20)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="Label3" type="Label" parent="."]
layout_mode = 2
text = "Waste"

[node name="ProgressBar3" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(500, 20)
layout_mode = 2
value = 50.0
show_percentage = false
